fix reduce cap height in collapsable data container component

--- a/src/widgets/DataContainer/DataContainer.module.scss
+++ b/src/widgets/DataContainer/DataContainer.module.scss
@@ -15,7 +15,7 @@
 }
 
 .collapsable {
-    min-height: 70px;
+    min-height: 50px;
 
     > .cap {
         position: absolute;
@@ -23,7 +23,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 70px;
+        height: 50px;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
@@ -31,6 +31,7 @@
         padding: clamp(10px, 2vw, 20px);
         background-color: var(--sec-bg);
         color: var(--main-txt);
+        line-height: 0;
     }
 
     > .cap {
@@ -65,7 +66,7 @@
     }
 
     > .cap + * {
-        margin-top: 70px;
+        margin-top: 50px;
         transition: margin-top 0.25s ease-in-out;
     }
 }
