--- a/src/widgets/Options/Options.module.scss
+++ b/src/widgets/Options/Options.module.scss
@@ -19,6 +19,7 @@
     
         > * {
             position: relative;
+            box-shadow: 0 0 5px 1px var(--transparent-bg);
         }
     }
 
